# cobblemon-studio

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: anim-bedrock.js  anim.html  assets-index.json  builders.js  creator.html  ctxmenu.js  data.json  doctor.html  evos.html  export.html  ficha.html  geo-three-reference.js  index.html  mypack.html  paint.html  photo.html  reskin.html  studio.css  tauri-shim.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
