[package]
name = "cobblemon-studio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cobblemon_studio_lib"
# Solo rlib: el cdylib peta con GNU-ld ("export ordinal too large" de windows-rs) y solo sirve para móvil.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"

